package n4systems.fieldid.api.pub.serialization;

import "Extensions.proto";
option java_outer_classname = "TestMessages";
option java_package = "com.n4systems.fieldid.api.pub.serialization";

message TestSimpleMessage
{
    optional double double_field = 1;
    optional float float_field = 2;
    optional int32 int32_field = 3;
    optional int64 int64_field = 4;
    optional uint32 uint32_field = 5;
    optional uint64 uint64_field = 6;
    optional sint32 sint32_field = 7;
    optional sint64 sint64_field = 8;
    optional fixed32 fixed32_field = 9;
    optional fixed64 fixed64_field = 10;
    optional sfixed32 sfixed32_field = 11;
    optional sfixed64 sfixed64_field = 12;
    optional bool bool_field = 13;
    optional string string_field = 14;
}

message TestNestedMessage
{
    required string string_field = 1;
}

message TestContainerMessage
{
    required int32 int32_field = 1;
    optional TestNestedMessage nested = 2;
}
